# smartstore-box-organizer-generator

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml
assets/: back_support_174mm_wide_column.step  back_support_174mm_wide_column.stl
src/: lib.rs  main.rs
src/cli/: containers.rs  generate.rs  mod.rs
src/generator/: mod.rs
src/rack/: mod.rs
