[package]
name = "container-rack-lib"
version = "0.2.0"
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
svg = "0.16.0"

[lib]
name = "container_rack_lib"
path = "src/lib.rs"