[package]
name = "container-rack-lib"
version = "0.2.0"
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cli = ["dep:clap", "dep:comfy-table"]
default = ["cli"]

[dependencies]
clap = { version = "4.5.13", features = ["derive"], optional = true  }
comfy-table ={ version =  "7.1.1" , optional = true }
svg = "0.17.0"
url = "2.5.1"

[lib]
name = "container_rack_lib"
path = "src/lib.rs"
