[package]
name = "container-rack-lib"
description = "Simple cli tool and library for generating storage shelfs for Smartstore containers" 
version = "0.3.2"
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cli = ["dep:clap", "dep:comfy-table"]
default = ["cli"]

[dependencies]
clap = { version = "4.5.23", features = ["derive"], optional = true  }
comfy-table ={ version =  "7.1.3" , optional = true }
svg = "0.18.0"
url = "2.5.4"

[lib]
name = "container_rack_lib"
path = "src/lib.rs"
